Fix not centered nav

--- a/scss/modules/site-header.scss
+++ b/scss/modules/site-header.scss
@@ -24,6 +24,10 @@
   }
   li {
     margin-right: 30px;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
   a {
     color: $color-dark;
